# bandeco

./: .gitignore  Dockerfile  README.md  bandeco.Dockerfile  docker-compose.yml  gateway.Dockerfile  pyproject.toml  python_whatsapp_wrapper-0.0.12-py3-none-any.whl  requirements.txt  whatsapp_bot-0.1.0-py3-none-any.whl
.github/workflows/: deploy.yml
app/: bandeco_bot.py  config.py  gateway.py  get_menu.py  gunicorn_config.py  init.py  initialize_bot.py  redis_conn.py  utils.py  wsgi.py
tests/unit/: test_command.py  test_date.py
